[gd_scene load_steps=7 format=2]

[ext_resource path="res://Script/Itens/Onion_Colletable.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Itens/onion_GUI-1.png.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Itens/onion_GUI-2.png.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 17.2629

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.991531, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 20.0, 0.0, -20.0, 0.0 ]
}

[node name="Onion_Colletable" type="Area2D"]
collision_layer = 256
script = ExtResource( 1 )

[node name="Onion_Colletable_AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="Onion_Colletable_Collision" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )

[node name="Onion_Animation" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 3 )

[node name="Onion_Notifier" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Onion_Colletable_body_entered"]
